<resources>
    <string name="app_name">YEF Portal</string>
    <string name="app_name_full">Youth Empowerment Foundation</string>
    <string name="yef_txt">YEF Home</string>
    <string name="menu_display">Menu Display</string>
    <string name="admin_login">Login</string>
    <string name="logout">Log Out</string>
    <string name="rate_app">Rate App</string>
    <string name="share_app">Share App</string>
    <string name="title_activity_admin_login">Log In</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be 5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="url">http://delgradecorporation.in/clients/yef/</string>


    <string name="event_name_text">Event Name</string>
    <string name="time_text">Time</string>
    <string name="event_details_text">Event Details</string>

    <string name="event_name">Event Name</string>
    <string name="venue">Venue:</string>
    <string name="place_and_address_of_the_event">Event Place</string>
    <string name="starts_from">Starts from:</string>
    <string name="event_starting_date">Event Starting date</string>
    <string name="ends_on">Ends On:</string>
    <string name="event_ending_date">Event Ending date</string>
    <string name="time">Time:</string>
    <string name="event_time">Event Time</string>
    <string name="event_type">Event Type:</string>
    <string name="event_type_text">Event type</string>
    <string name="event_host_details">Event Host Details:</string>
    <string name="event_hosting_details">Event hosting details</string>
    <string name="get_me_directions">Get Me Directions</string>


    <!--Titles-->
    <string name="login_title">Login</string>
    <string name="signup_title">Sign up</string>

    <!--Welcome messages-->
    <string name="splash_welcome_txt">Easiest way to\nfind the best product</string>
    <string name="login_welcome_txt">Hello there !\nWelcome Back</string>
    <string name="signup_welcome_txt">Hello there !\nWelcome to you</string>


    <!--Button labels-->
    <string name="login_btn_label">Login</string>
    <string name="signup_btn_label">Signup</string>

    <string name="login_label">" Login"</string>
    <string name="signup_label">" Signup"</string>

    <string name="login_fb_btn_label">"{faw-facebook-f}    Login with Facebook"</string>
    <string name="signup_fb_btn_label">"{faw-facebook-f}    Signup with Facebook"</string>

    <string name="get_started_btn_label">Get Started</string>

    <!--Edit Text hints-->
    <string name="email_address_hint">Email Address</string>
    <string name="full_name_hint">Full Name</string>
    <string name="password_hint">Password</string>


    <!--Misc texts-->
    <string name="forgot_password">Forgot password?</string>
    <string name="no_account">Don\’t have an account?</string>
    <string name="have_account">Have an account?</string>
    <string name="divider_or">OR</string>
    <string name="no_account_yet">No account yet? <u>Create</u> one</string>
    <string name="login">Already a member? <u>Login</u></string>
</resources>
