<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Event_detail"
    android:background="@drawable/toolbarbg">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/faback"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="visible"
            android:layout_margin="10dp"
            app:backgroundTint="@color/common_google_signin_btn_text_light_default"
            app:srcCompat="@drawable/ic_back" />

        <androidx.cardview.widget.CardView
            android:layout_below="@+id/faback"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            card_view:cardCornerRadius="20dp"
            app:cardElevation="10dp"
            card_view:cardBackgroundColor="#ccff90"
            android:layout_centerVertical="true"
            android:layout_margin="15dp">

            <RelativeLayout

                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="40dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/rel1">

                    <TextView
                        android:id="@+id/event_name_display"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:hint="@string/event_name"
                        android:singleLine="true"
                        android:textColor="#000"
                        android:textSize="38sp"
                        android:textStyle="bold" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_below="@+id/event_name_display">

                        <TextView
                            android:id="@+id/textView1"
                            android:layout_width="match_parent"
                            android:gravity="center_horizontal"
                            android:layout_height="wrap_content"
                            android:text="@string/venue"
                            android:textColor="#000"
                            android:textSize="18sp"
                            android:textStyle="bold"/>

                        <TextView
                            android:id="@+id/eventplace_display"
                            android:layout_below="@+id/textView1"
                            android:layout_width="match_parent"
                            android:gravity="center_horizontal"
                            android:layout_height="wrap_content"
                            android:hint="@string/place_and_address_of_the_event"
                            android:lineSpacingMultiplier="1.1"
                            android:maxLines="4"
                            android:textSize="16sp" />



                        <TextView
                            android:id="@+id/textView3"
                            android:layout_below="@+id/eventplace_display"
                            android:layout_width="match_parent"
                            android:gravity="center_horizontal"
                            android:layout_height="wrap_content"
                            android:text="@string/starts_from"
                            android:textColor="#000"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/eventSdate_display"
                            android:layout_below="@+id/textView3"
                            android:layout_width="match_parent"
                            android:gravity="center_horizontal"
                            android:layout_height="wrap_content"
                            android:hint="@string/event_starting_date"
                            android:textSize="16sp" />


                        <TextView
                            android:id="@+id/textView4"
                            android:layout_below="@+id/eventSdate_display"
                            android:layout_width="match_parent"
                            android:gravity="center_horizontal"
                            android:layout_height="wrap_content"
                            android:text="@string/ends_on"
                            android:textColor="#000"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/eventEdate_display"
                            android:layout_below="@+id/textView4"
                            android:layout_width="match_parent"
                            android:gravity="center_horizontal"
                            android:layout_height="wrap_content"
                            android:hint="@string/event_ending_date"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/textView5"
                            android:layout_below="@+id/eventEdate_display"
                            android:layout_width="match_parent"
                            android:gravity="center_horizontal"
                            android:layout_height="wrap_content"
                            android:text="@string/time"
                            android:textColor="#000"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/eventTime_display"
                            android:layout_below="@+id/textView5"
                            android:layout_width="match_parent"
                            android:gravity="center_horizontal"
                            android:layout_height="wrap_content"
                            android:hint="@string/event_time"
                            android:textSize="16sp" />


                        <TextView
                            android:id="@+id/textView6"
                            android:layout_below="@+id/eventTime_display"
                            android:layout_width="match_parent"
                            android:gravity="center_horizontal"
                            android:layout_height="wrap_content"
                            android:text="@string/event_type"
                            android:textColor="#000"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/eventType_display"
                            android:layout_below="@+id/textView6"
                            android:layout_width="match_parent"
                            android:gravity="center_horizontal"
                            android:layout_height="wrap_content"
                            android:hint="@string/event_type_text"
                            android:textSize="16sp" />


                        <TextView
                            android:id="@+id/textView7"
                            android:layout_width="match_parent"
                            android:gravity="center_horizontal"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/eventType_display"
                            android:text="@string/event_host_details"
                            android:textColor="#000"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/eventHost_display"
                            android:layout_below="@+id/textView7"
                            android:layout_width="match_parent"
                            android:gravity="center_horizontal"
                            android:layout_height="wrap_content"
                            android:hint="@string/event_hosting_details"
                            android:maxLines="3"
                            android:textSize="16sp" />


                    </RelativeLayout>


                </RelativeLayout>




                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@+id/rel1"
                    android:layout_marginTop="5dp"
                    android:layout_alignParentBottom="true"
                    android:gravity="center"
                    android:padding="10dp">


                    <Button
                        android:id="@+id/btn_direction"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Directions" />

                    <Button
                        android:id="@+id/btn_register"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/btn_direction"
                        android:gravity="center"
                        android:text="Register Now!" />


                </LinearLayout>


            </RelativeLayout>

        </androidx.cardview.widget.CardView>


    </RelativeLayout>




</androidx.core.widget.NestedScrollView>